#23 リファクタリング＆試験自動化検討（Espresso、Robolectric導入） #23 リファクタリング＆試験自動化検討（Android Lint対応） #23 リファクタリング＆試験自動化検討（Icepick導入）